--- a/EticketF/templates/login.html
+++ b/EticketF/templates/login.html
@@ -6,36 +6,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'login.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+    <div class="main-content">
+        <form method="post">
+            {% csrf_token %}
+        <div class="login-wrap">
+            <div class="login-html">
+                <input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Нэвтрэх</label>
+                <input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab">Бүртгэл</label>
+                <div class="login-form">
+                    <div class="sign-in-htm">
+                        <div class="group">
+                            <label for="uname" class="label">Нэвтрэх нэр</label>
+                            <input id="uname" name="uname" type="text" class="input">
+                        </div>
+                        <div class="group">
+                            <label for="pass" class="label">Нууц үг</label>
+                            <input id="pass" type="password" class="input" data-type="password" name="pass">
+                            {% if messages %}
+                <di class="messages">
+                    {% for message in messages %}
+                        <strong{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</strong>
+                    {% endfor %}
+                {% endif %}
+                        </div>
+                        <div class="group">
+                            <input id="check" type="checkbox" class="check" checked>
+                            <label for="check"><span class="icon"></span> Keep me Signed in</label>
+                        </div>
+                        <div class="group">
+                            <button type="submit" class="button">log in</button>
+                        </div>
 
-<div class="main-content">
-    <h1>Нэвтрэх хэсэг</h1>
-    <form method="post">
-        {% csrf_token %}
-        <label for="uname">Нэр:</label>
-        <p></p>
-        <input type="text" name="uname" id="uname" placeholder="нэрээ оруулна уу"><br>
-        <p></p>
-        <label for="pass">Нууц үг:</label>
-        <p></p>
-        <input type="text" name="pass" id="pass" placeholder="нууц үгээ оруулна уу"><br>
-        <p></p>
-        {% if messages %}
-        <di class="messages">
-            {% for message in messages %}
-                <strong{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</strong>
-            {% endfor %}
-        {% endif %}
-        </di>
-    <p></p>
-        <button type="submit" style="inset-block-end: 50px;">Нэвтрэх</button>
-      </form>
-      <p></p>
+                        <div class="hr"></div>
+                        <div class="foot-lnk">
+                            <a href="#forgot">Нууц үг мартсан?</a>
+                        </div>
+                    </div>
+                    <div class="sign-up-htm">
+                        <div class="group">
+                            <label for="user" class="label">Username</label>
+                            <input id="user" type="text" class="input">
+                        </div>
+                        <div class="group">
+                            <label for="pass" class="label">Шинэ нууц үг </label>
+                            <input id="pass" type="password" class="input" data-type="password">
+                        </div>
+                        <div class="group">
+                            <label for="pass" class="label">Нууц үг давтах</label>
+                            <input id="pass" type="password" class="input" data-type="password">
+                        </div>
+                        <div class="group">
+                            <label for="pass" class="label">Цахим хаяг оруулах</label>
+                            <input id="pass" type="text" class="input">
+                        </div>
+                        <div class="group">
+                            <input type="submit" class="button" value="Sign Up">
+                        </div>
+                        <div class="hr"></div>
+                        <div class="foot-lnk">
+                            <label for="tab-1">Хэрэглэгч мөн эсэх?</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
+    </div>
+
       <a href="{% url 'signup' %}">Бүртгэл үүсгэх</a>
-</div>
+
 </body>
 <script src="{% static 'style.js' %}"></script>
 </html>
