--- a/EticketF/templates/signup.html
+++ b/EticketF/templates/signup.html
@@ -1,6 +1,7 @@
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'login.css' %}">
 <div class="main-content">
+  <input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab">Бүртгэл</label>
 {% block content %}
   <h1>Бүртгүүлэх хэсэг</h1>
   <form method="post">
@@ -13,6 +14,14 @@
     <p></p>
     <input type="text" name="username" id="username" placeholder="нэрээ оруулна уу"><br>
     <p></p>
+    <label for="nick">nick:</label>
+    <p></p>
+    <input type="text" name="nick" id="nick" placeholder="нэрээ оруулна уу"><br>
+    <p></p>
+    <label for="mail">mail:</label>
+    <p></p>
+    <input type="text" name="mail" id="mail" placeholder="нэрээ оруулна уу"><br>
+    <p></p>
     <label for="password">Нууц үг:</label>
     <p></p>
     <input type="text" name="password" id="password" placeholder="нууц үгээ оруулна уу"><br>
@@ -24,7 +33,7 @@
         {% endfor %}
     {% endif %}
     <p></p>
-    <button type="submit">Бүртгүүлэх</button>
+    <button type="submit">Sign up</button>
   </form>
 {% endblock %}
 </div>
