--- a/EticketF/templates/login.html
+++ b/EticketF/templates/login.html
@@ -49,19 +49,23 @@
                     <div class="sign-up-htm">
                         <div class="group">
                             <label for="user" class="label">Username</label>
-                            <input id="user" type="text" class="input">
+                            <input id="user" type="text" class="input" name="user">
                         </div>
                         <div class="group">
-                            <label for="pass" class="label">Шинэ нууц үг </label>
-                            <input id="pass" type="password" class="input" data-type="password">
+                            <label for="nick" class="label">Nickname</label>
+                            <input id="nick" type="text" class="input" name="nick">
+                        </div>
+                        <div class="group">
+                            <label for="password" class="label">Нууц үг </label>
+                            <input id="password" type="password" class="input" data-type="password" name="password">
                         </div>
                         <div class="group">
                             <label for="pass" class="label">Нууц үг давтах</label>
-                            <input id="pass" type="password" class="input" data-type="password">
+                            <input id="rpass" type="password" class="input" data-type="password" name="rpass">
                         </div>
                         <div class="group">
                             <label for="pass" class="label">Цахим хаяг оруулах</label>
-                            <input id="pass" type="text" class="input">
+                            <input id="mail" type="mail" class="input" name="mail">
                         </div>
                         <div class="group">
                             <input type="submit" class="button" value="Sign Up">
