--- a/EticketF/templates/contact.html
+++ b/EticketF/templates/contact.html
@@ -14,7 +14,7 @@
     {% include 'menu.html' %}
   {% endblock %}
   
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1776.68203800193!2d106.88683789316201!3d47.927387123553046!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5d96ecda9b63390f%3A0xc09f32fd3ef3797d!2sMandakh%20University%2C%20School%20Of%20Information%20Technology!5e0!3m2!1sen!2smn!4v1679852255995!5m2!1sen!2smn" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1776.68203800193!2d106.88683789316201!3d47.927387123553046!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5d96ecda9b63390f%3A0xc09f32fd3ef3797d!2sMandakh%20University%2C%20School%20Of%20Information%20Technology!5e0!3m2!1sen!2smn!4v1679852255995!5m2!1sen!2smn" width="50%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 <div class="last">
-    
+    asdasd
 </div>
