--- a/EticketF/templates/user.html
+++ b/EticketF/templates/user.html
@@ -1,18 +1,11 @@
-{% load static %}
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="{% static 'user.css' %}">
 
-
-<div class="popL" id="cls1">
-</div>
-<div class="pop">   
-<div class="popM"id="cls2"><i class="fa fa-close" onclick="cls()"></i>
-   <h2 style="margin-top: 8%">Галт тэрэгний тасалбар захиалгын сайтад тавтай морил.</h2> 
-   сайн байна уу?{{lgn}}
-</div>
-</div> 
-<h1>users</h1>
 {% block content %}
+{% include 'menu.html' %}
+{% endblock %}
+
+<div class="height-100 bg-light">
+<h1>users</h1>
+{% block contents %}
 <table style="border: 1px solid black;">
     <tr>
         <th>ID</th>
@@ -27,7 +20,4 @@
     </tr>
     {% endfor %}
 </table>
-{% endblock %}
-
-<button><a href="{% url 'login' %}">log out</a></button>
-<script src="{% static 'style.js' %}"></script>
+{% endblock %}</div>
