--- a/EticketF/templates/menu.html
+++ b/EticketF/templates/menu.html
@@ -22,7 +22,7 @@
                 <a href="{% url 'dashboard' %}" class="nav_link"> <i class='bx bx-grid-alt nav_icon'></i> <span class="nav_name">Нүүр хуудас</span> </a> 
                 <a href="{% url 'user' %}" class="nav_link"> <i class='bx bx-user nav_icon'></i> <span class="nav_name">Хэрэглэгч</span> </a> 
                 <a href="{% url 'contact' %}" class="nav_link"> <i class='bx bx-map nav_icon'></i> <span class="nav_name">Хаяг байршил</span> </a> 
-                <a href="#" class="nav_link"> <i class='bx bx-news nav_icon'></i> <span class="nav_name">Мэдээ</span> </a>
+                <a href="https://news.mn/" class="nav_link"> <i class='bx bx-news nav_icon'></i> <span class="nav_name">Мэдээ</span> </a>
                  <a href="{% url 'ticket' %}" class="nav_link"> <i class='bx bx-bar-chart-alt-2 nav_icon'></i> <span class="nav_name">Тасалбар захиалга</span> </a> 
                  <a href="{% url 'my_ticket' %}" class="nav_link"> <i class='bx bx-folder nav_icon'></i> <span class="nav_name">Миний захиалгууд</span> </a> </div>
           </div> <a href="{% url 'login'%}" class="nav_link"> <i class='bx bx-log-out nav_icon'></i> <span class="nav_name">Гарах</span> </a>
