--- a/EticketF/templates/dashboard.html
+++ b/EticketF/templates/dashboard.html
@@ -1,4 +1,92 @@
 {% block content %}
 {% include 'menu.html' %}
 {% endblock %}
+<style>
+    img {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  z-index: -1;
+  height: 500px;
+  width: 1500px;
+  margin-top: 70px;
+  padding-top: -100px;
+  padding-left: 90px;
+  margin-left: -25px;
+  padding-bottom: -50px;
+}
+.font{
+    font-size: 18px;
+    color: aliceblue;
+    padding-left: 60px;
+   
+}
+.font1{
+    color: aliceblue;
+    margin-top:200px;
+    padding-left: 110px;
+}
+.header1{
+    /* background-color: #4723D9; */
+    height: 70px;
+    width: 1500px;
+    padding-top: 20px;
 
+}
+button{
+    margin-left: 100px;
+    border-radius: 10px;
+}
+.footer{
+    /* background-color: #4723D9; */
+    height: 200px;
+    width: 1500px;
+    padding-top:20px;
+    
+}
+h2{
+    margin-left: 400px;
+    margin-top: -20px;
+}
+</style>
+<div>
+    <div class="header1">
+        <button >
+            УЛААНБААТАР-ЗАМЫН-ҮҮД
+        </button>
+        <button >
+            УЛААНБААТАР-ЗАМЫН-ҮҮД
+        </button>
+        <button >
+            УЛААНБААТАР-ЗАМЫН-ҮҮД
+        </button>
+        <button >
+            УЛААНБААТАР-ЗАМЫН-ҮҮД
+        </button>
+        
+    </div>
+    <div class="font1">
+    <h1>НАЙДВАРТАЙ, ТАВ ТУХТАЙ, </h1>
+    <h1>ХЯМД ҮНЭЭР ҮЙЛЧЛҮҮЛЭХ БОЛОМЖ</h1>
+    </div>
+    <div class="img">
+    <img src="../static/images/t1.jpeg" alt="">
+    <pre class="font">
+    -Бүртгэл үүсгэж, тасалбар худалдаж авахад ердөө 5 минут хангалттай.
+    -И-Мэйл, Facebook, Google хаягуудын алинаар ч бүртгүүлэх боломжтой.
+    -Суудлаа сонгох боломжтой.
+    -Банкны дотоодын карт болон candy оноогоор төлбөр төлөх боломжтой.
+    -Интернетээр худалдаж авсан тасалбараа үзүүлээд галт тэргэндээ шууд сууна.
+    -Нэг дор 4 хүртэл суудлын тасалбар худалдан авах боломжтой.
+    </pre>
+    </div>
+    <div class="footer">
+       <div >
+        <h2>НАЙРСАГ, МЭРГЭШСЭН ХАМТ ОЛОН</h2>
+       </div>
+    </div>
+    
+</div>
+
+
+ 
