--- a/EticketF/templates/index.html
+++ b/EticketF/templates/index.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+
+    {{aalz}}
+    |||||
+    {{aalz2}}
     <div class="main-content">
         
         <form method="post">
